# aarchitect-ui

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
.github/workflows/: cmake.yml
Libraries/dlist/: CMakeLists.txt
Libraries/libui/: libUI-config.cmake
Libraries/string/: CMakeLists.txt
Libraries/string/src/: wstr.c
Libraries/tabulatedcf/: CMakeLists.txt
Libraries/tabulatedcf/src/: error.c  file.c  lexer.c  parser.c
Libraries/tabulatedcf/test/: CMakeLists.txt
Libraries/tabulatedcf/test/src/: main.c
exthost/: CMakeLists.txt
exthost/callee/: CMakeLists.txt
exthost/callee/src/: io.c  io.h  main.cc  main.hxx  synch.cc  synch.hxx
exthost/caller/: CMakeLists.txt  duktape.cmake
exthost/caller/src/: hook.cc  langprocs.cc  langprocs.hxx  pipes.hpp
exthost/plapihlp/: CMakeLists.txt
exthost/plapihlp/src/: io.c
exthost/src/: main.cc  options.cc  options.hxx
exthost/synch/: CMakeLists.txt
exthost/synch/src/win/: pipes.c  process.c
include/: aarchitect.h  aarchitect_cof.h  apiutils.h  argh.h  connection_opcodes.h  event_teller.h  exthost.h  libstring.h  synch.h  tabulatedcf.h  tabulatedcf_int.h
include/aarchitect/: aarchitect_connection.h  api.h  chat.h  messagepass.h  pluginhlpapi.hxx  settingapi.h
include/aarchitect/bits/: aarbase.h  noc++incdirecwarn.hxx
include/tabulatedcf/: apidecl.h
resource/: icon.rc  metadata.rc
scripthost/: CMakeLists.txt
scripthost/src/: main.cc
scripthost/src/eventteller/: callback.cc
scripts/: test.gravity
scripts/typings/: index.d.ts
server/: CMakeLists.txt
server/src/: config.h  conv.c  conversions.h  main.c  message.c  message.h  pluginhlp.cc  protocol.c  protocol.cc  protocol.h  users.cc
src/: atribstring.cc  atribstring.h  blank.cc  main.c  main.cc  pluginhlp.cc  scripterrorcode.h  settings.c  string.c  util.c  wSettings.c  wSettings.cc
src/connection/: connection.h  init.c  mgmt.c  netabstr.c  networking.c  sendreceive.c  transport.c  transport.cc
src/externalComm/threads/: posix.c  threadingapi.h  win32.c
src/ui/: chat.c
